# algomate

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml  run_tests.ps1  run_tests.py  start_backend.py  start_frontend.py
config/: settings.py
docs/: 产品设计.md  开发任务清单.md  技术方案.md  数据库表结构设计.md  需求分析.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: card-system.spec.js  hall.spec.js  npc-dialogue-flow.spec.js  npc-dialogue.spec.js
frontend/src/: App.jsx  index.css
scripts/: dev.py
src/algomate/: __init__.py  __main__.py  main.py
tests/: conftest.py  run_hall_unit_simple.py  test_api_routes.py  test_battle_record_model.py  test_battle_record_repo.py  test_boss_api.py  test_boss_api_helpers.py  test_boss_model.py  test_boss_repo.py  test_business_flow.py  test_core_business_logic.py  test_db_init.py  test_dialogue_integration.py  test_dialogue_unit.py  test_f01_card_system.py  test_f01_integration.py  test_f01_system.py  test_f01_unit_comprehensive.py  test_f02_dialogue_models.py  test_f04_api_v1.py  test_f04_backend_enhancements.py  test_f04_review_records.py  test_f05_card_workshop.py  test_f07_dialogue_guide.py  test_f08_settings.py  test_f08_settings_api.py  test_forgetting_curve_system.py  test_guide_models.py  test_guide_service.py  test_hall_routes_unit.py  test_leetcode_integration.py  test_m4_ai_agent.py  test_onboarding_api.py  test_review_statistics.py  test_simple.py  verify_business_flow.py  verify_m5.py
tests/integration/: conftest.py  test_boss_api.py
(+283 files in other folders)
